--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@hookform/resolvers": "^3.3.1",
-    "@tanstack/react-query": "^5.84.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -17,16 +15,10 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "recharts": "^3.1.0",
-    "tailwindcss": "^3.3.3",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.3.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,7 +46,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29"
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   },
   "proxy": "http://localhost:5000"
 }
