--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
+  "buildCommand": "cd frontend && npm ci && npm run build",
   "outputDirectory": "frontend/build",
-  "installCommand": "cd frontend && npm install",
-  "devCommand": "cd frontend && npm start",
-  "framework": "create-react-app"
+  "installCommand": "cd frontend && npm ci"
 }
