--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,17 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Production builds
+build/
+dist/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Runtime data
 pids
 *.pid
@@ -16,16 +27,6 @@ coverage/
 
 # nyc test coverage
 .nyc_output
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Snowpack dependency directory (https://snowpack.dev/)
-web_modules/
-
-# TypeScript cache
-*.tsbuildinfo
 
 # Optional npm cache directory
 .npm
@@ -48,13 +49,6 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
@@ -64,10 +58,6 @@ web_modules/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
-
-# Gatsby files
-.cache/
 
 # Storybook build outputs
 .out
@@ -81,19 +71,9 @@ temp/
 logs
 *.log
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
 # Database
 *.db
 *.sqlite
-
-# Build directories
-build/
-dist/
 
 # IDE files
 .vscode/
@@ -111,12 +91,14 @@ dist/
 ehthumbs.db
 Thumbs.db
 
-# Upload directories
-uploads/
+# Upload directories (backend only)
 backend/uploads/
 
-# React build
-frontend/build/
+# Backend directory (keep the backend separate)
+backend/
+
+# Old frontend directory (we moved everything to root)
+frontend/
 
 # MongoDB
 data/
